setting up bulk edit for loto point